--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container navbar sticky" id="navbar">
+        <div class="row">
+            <div>
+                <a href="#about-div">About Me</a>
+                <a href="#skills-div">Skills</a>
+                <a href="#deployed-div">Projects</a>
+                <a href="#contact-div">Contact</a>
+            </div>
+        </div>
+    </div>
+    <div class="container header-div" id="header-div">
+        <div class="row">
+            <div>
+                <h1>Aaron Prince</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container about-div main-div" id="about-div">
+        <div>
+            <div>
+                <h1>About Me</h1>
+                <img src="images/Aaron Pic.jpg" alt="Profile picture of Aaron Prince">
+                <p>I am a web-developer with a history of problem solving, teamwork and leadership. I value independence, responsibility and success. I have a history of working well with anyone from the military and a proven record of finding and fixing problems while working as an automotive technician with BMW. </p>
+                <p>I have previously held a secret security clearence while in the military and I am within the window of renewal for my clearence</p>
+            </div>
+        </div>
+    </div>
+    <div class="container skills-div" id="skills-div">
+        <div class="row">
+            <h1>Skills</h1>
+            <div class="col s4">
+                <h4>Front-End</h4>
+                <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>React-Native</li>
+                <li>Bootstrap</li>
+                <li>Materialize</li>
+                <li>EJS</li>
+                </ul>
+            </div>
+            <div class="col s4">
+                <h4>Back-End</h4>
+                <ul>
+                <li>NodeJS</li>
+                <li>Express</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>Django</li>
+                <li>Python</li>
+                </ul>
+            </div>
+            <div class="col s4">
+                <h4>Other</h4>
+                <ul>
+                <li>Github</li>
+                <li>Git</li>
+                <li>Slack</li>
+                <li>LucidChart</li>
+                <li>Heroku</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container deployed-div" id="deployed-div">
+        <div class="row">
+            <h1>Deployed Projects</h1>
+            <div>
+                <ul>
+                    <li><a href="https://lnkd.in/gaRJG65">JavaScript Pacman</a></li>
+                    <li><a href="https://liquor-list.herokuapp.com/">Liquor List</a></li>
+                    <li><a href="https://bird-flow.herokuapp.com/">Group project Bird-Flow</a></li>
+                    <li><a href="https://wow-gt.herokuapp.com/">WOW Gear Tracker</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container other-div">
+        <div class="row">
+            <div>
+                <h1>Other Projects</h1>
+                <ul>
+                    <li><a href="https://github.com/aprin418/ReactNativeNucamp">React-Native project completed with NuCamp</a></li>
+                    <li><a href="https://github.com/aprin418/ReactNucamp">React project completed with NuCamp</a></li>
+                    <li><a href="https://github.com/aprin418/nucampsite">NuCamp project for Bootstrap</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container contact-div" id="contact-div">
+        <div class="row">
+            <div>
+                <h1>Contact Info</h1>
+                <a href="#" class="fa fa-github"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-envelope"></a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
