Working on cards

--- a/index.html
+++ b/index.html
@@ -1,118 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container navbar sticky" id="navbar">
-        <div class="row">
-            <div>
-                <a href="#about-div">About Me</a>
-                <a href="#skills-div">Skills</a>
-                <a href="#deployed-div">Projects</a>
-                <a href="#contact-div">Contact</a>
-            </div>
+      <div class="row">
+        <div>
+          <a href="#header-div">Home</a>
+          <a href="#about-div">About Me</a>
+          <a href="#skills-div">Skills</a>
+          <a href="#deployed-div">Projects</a>
+          <a href="#contact-div">Contact</a>
         </div>
+      </div>
     </div>
     <div class="container header-div" id="header-div">
-        <div class="row">
-            <div>
-                <h1>Aaron Prince</h1>
-            </div>
+      <div class="row">
+        <div>
+          <h1>Aaron Prince</h1>
         </div>
+      </div>
     </div>
     <div class="container about-div main-div" id="about-div">
+      <div>
         <div>
-            <div>
-                <h1>About Me</h1>
-                <img src="images/Aaron Pic.jpg" alt="Profile picture of Aaron Prince">
-                <p>I am a web-developer with a history of problem solving, teamwork and leadership. I value independence, responsibility and success. I have a history of working well with anyone from the military and a proven record of finding and fixing problems while working as an automotive technician with BMW. </p>
-                <p>I have previously held a secret security clearence while in the military and I am within the window of renewal for my clearence</p>
-            </div>
+          <h1>About Me</h1>
+          <img
+            src="images/Aaron Pic.jpg"
+            alt="Profile picture of Aaron Prince"
+          />
+          <p>
+            I am a software engineer with a history of problem solving, teamwork
+            and leadership. I value independence, responsibility and success. I
+            have a history of working well with anyone from the military and a
+            proven record of finding and fixing problems while working as an
+            automotive technician with BMW.
+          </p>
+          <p>
+            I have previously held a secret security clearance while in the
+            military and I am within the window of renewal for my clearance
+          </p>
         </div>
+      </div>
     </div>
     <div class="container skills-div" id="skills-div">
-        <div class="row">
-            <h1>Skills</h1>
-            <div class="col s4">
-                <h4>Front-End</h4>
-                <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>React-Native</li>
-                <li>Bootstrap</li>
-                <li>Materialize</li>
-                <li>EJS</li>
-                </ul>
-            </div>
-            <div class="col s4">
-                <h4>Back-End</h4>
-                <ul>
-                <li>NodeJS</li>
-                <li>Express</li>
-                <li>SQL</li>
-                <li>MongoDB</li>
-                <li>Django</li>
-                <li>Python</li>
-                </ul>
-            </div>
-            <div class="col s4">
-                <h4>Other</h4>
-                <ul>
-                <li>Github</li>
-                <li>Git</li>
-                <li>Slack</li>
-                <li>LucidChart</li>
-                <li>Heroku</li>
-                </ul>
-            </div>
+      <div class="row">
+        <h1>Skills</h1>
+        <div class="col s4">
+          <h4>Front-End</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>React-Native</li>
+            <li>Bootstrap</li>
+            <li>Materialize</li>
+            <li>EJS</li>
+          </ul>
         </div>
+        <div class="col s4">
+          <h4>Back-End</h4>
+          <ul>
+            <li>NodeJS</li>
+            <li>Express</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>Django</li>
+            <li>Python</li>
+          </ul>
+        </div>
+        <div class="col s4">
+          <h4>Other</h4>
+          <ul>
+            <li>Github</li>
+            <li>Git</li>
+            <li>Slack</li>
+            <li>LucidChart</li>
+            <li>Heroku</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="container deployed-div" id="deployed-div">
-        <div class="row">
-            <h1>Deployed Projects</h1>
-            <div>
-                <ul>
-                    <li><a href="https://lnkd.in/gaRJG65">JavaScript Pacman</a></li>
-                    <li><a href="https://liquor-list.herokuapp.com/">Liquor List</a></li>
-                    <li><a href="https://bird-flow.herokuapp.com/">Group project Bird-Flow</a></li>
-                    <li><a href="https://wow-gt.herokuapp.com/">WOW Gear Tracker</a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <h1>Deployed Projects</h1>
+        <div>
+          <div class="col s4">
+            <a href="https://lnkd.in/gaRJG65">
+              <div class="card">
+                <div class="card-image">
+                  <img src="images/PacManIntro.png" alt="pacman picture" />
+                  <span class="card-title">JavaScript Pacman</span>
+                </div>
+                <div class="card-content">
+                  <p>JavaScript Pacman</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col s4">
+            <a href="https://liquor-list.herokuapp.com/">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>Liquor List</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col s4">
+            <a href="https://bird-flow.herokuapp.com/">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>Group project Bird-Flow</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col s4">
+            <a href="https://wow-gt.herokuapp.com/">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>WOW Gear Tracker</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
     <div class="container other-div">
-        <div class="row">
-            <div>
-                <h1>Other Projects</h1>
-                <ul>
-                    <li><a href="https://github.com/aprin418/ReactNativeNucamp">React-Native project completed with NuCamp</a></li>
-                    <li><a href="https://github.com/aprin418/ReactNucamp">React project completed with NuCamp</a></li>
-                    <li><a href="https://github.com/aprin418/nucampsite">NuCamp project for Bootstrap</a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <div>
+          <h1>Other Projects</h1>
+          <div class="col s4">
+            <a href="https://github.com/aprin418/ReactNativeNucamp">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>React-Native project completed with NuCamp</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col s4">
+            <a href="https://github.com/aprin418/ReactNucamp">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>React project completed with NuCamp</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col s4">
+            <a href="https://github.com/aprin418/nucampsite">
+              <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                  <p>NuCamp project for Bootstrap</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
     <div class="container contact-div" id="contact-div">
-        <div class="row">
-            <div>
-                <h1>Contact Info</h1>
-                <a href="#" class="fa fa-github"></a>
-                <a href="#" class="fa fa-linkedin"></a>
-                <a href="#" class="fa fa-envelope"></a>
-            </div>
+      <div class="row">
+        <div>
+          <h1>Contact Info</h1>
+          <a href="#" class="fa fa-github"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-envelope"></a>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
