added contact links

--- a/index.html
+++ b/index.html
@@ -315,9 +315,12 @@
       <h1>Contact Info</h1>
       <div class="row mb-0">
         <div class="col">
-          <a href="#" class="fa fa-github"></a>
-          <a href="#" class="fa fa-linkedin"></a>
-          <a href="#" class="fa fa-envelope"></a>
+          <a href="https://github.com/aprin418" class="fa fa-github"></a>
+          <a
+            href="https://www.linkedin.com/in/aaron-prince-409a1bbb/"
+            class="fa fa-linkedin"
+          ></a>
+          <a href="mailto:aprin418@gmail.com" class="fa fa-envelope"></a>
         </div>
       </div>
     </div>
