--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="width=device-width, initial-scale=1"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -63,7 +66,7 @@
     <div class="container-fluid about-div" id="about-div">
       <div class="row mb-0">
         <div class="col">
-          <h1>About Me</h1>
+          <h2>About Me</h2>
           <img
             src="images/Aaron Pic.jpg"
             alt="Profile picture of Aaron Prince"
@@ -84,7 +87,7 @@
     </div>
 
     <div class="container-fluid skills-div" id="skills-div">
-      <h1>Skills</h1>
+      <h2>Skills</h2>
       <div class="row mb-0">
         <div class="col s4">
           <h4>Front-End</h4>
@@ -124,7 +127,7 @@
     </div>
 
     <div class="container-fluid deployed-div" id="deployed-div">
-      <h1>Deployed Projects</h1>
+      <h2>Deployed Projects</h2>
       <div class="row mb-0">
         <div>
           <div class="col s4">
@@ -226,7 +229,7 @@
     </div>
 
     <div class="container-fluid other-div" id="other-div">
-      <h1>Other Projects</h1>
+      <h2>Other Projects</h2>
       <div class="row mb-0">
         <div>
           <div class="col s4">
@@ -312,7 +315,7 @@
     </div>
 
     <div class="container-fluid contact-div" id="contact-div">
-      <h1>Contact Info</h1>
+      <h2>Contact Info</h2>
       <div class="row mb-0">
         <div class="col">
           <a href="https://github.com/aprin418" class="fa fa-github"></a>
@@ -325,6 +328,16 @@
       </div>
     </div>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
